feat: Fixed correlation issues

--- a/simulations/EdgeScenario/analysis/resources.ipynb
+++ b/simulations/EdgeScenario/analysis/resources.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7aa3d16a-da14-4da5-afd0-3106ca224dd1",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c3bf3740-97a4-4ef5-94c5-cc84c33f41f3",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "74      None    NaN  [113.178218007921]  [250.0]  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,22 +201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "485adbf1-a580-4919-8cd4-f17a82ef4c56",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n"
+     "ename": "NameError",
+     "evalue": "name 'process_vector' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m res_dc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m()\n\u001b[0;32m----> 2\u001b[0m res_dc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvms\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_vector\u001b[49m(filter_vec(targetDcRes, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallocatedVms\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvms\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m res_dc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mram\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m process_vector(filter_vec(targetDcRes, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallocatedRam\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mram\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m res_dc[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdisk\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m process_vector(filter_vec(targetDcRes, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallocatedDisk\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdisk\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'process_vector' is not defined"
      ]
     }
    ],
