feat: Initial testing for modularizing the configuration

--- a/simulations/EdgeScenario/analysis/delays.ipynb
+++ b/simulations/EdgeScenario/analysis/delays.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "7d6dc4ca-36ef-4e83-a776-1774d826d267",
    "metadata": {},
    "outputs": [],
@@ -52,19 +52,12 @@
     "    'vectime': parse_ndarray,\n",
     "    'vecvalue': parse_ndarray})\n",
     "\n",
-    "# Filtramos end-to-end delay +  eliminamos los NaN\n",
+    "# Filtramos latencias +  eliminamos los NaN\n",
     "vec = targetDcDelay[targetDcDelay.name == 'roundTripTime:vector']\n",
     "vec = vec[vec.type == \"vector\"]\n",
     "\n",
-    "# Empezamos el proceso de merging del conjunto de datos\n",
     "row = vec.iloc[0]\n",
-    "delay_dc = pd.DataFrame(index=row.vectime, data={'delay' : row.vecvalue*1000})\n",
-    "\n",
-    "#for i in range(1,len(vec)):\n",
-    "#    row = vec.iloc[i]\n",
-    "#    row = pd.DataFrame(index=row.vectime, data={'delay' : row.vecvalue*1000})\n",
-    "#    mean_delay_dc = pd.concat((mean_delay_dc, row))\n",
-    "#mean_delay_dc = mean_delay_dc.groupby(level=0).mean()"
+    "delay_dc = pd.DataFrame(index=row.vectime, data={'delay' : row.vecvalue*1000})"
    ]
   },
   {
