--- a/simulations/EdgeScenario/analysis/resources.ipynb
+++ b/simulations/EdgeScenario/analysis/resources.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "7aa3d16a-da14-4da5-afd0-3106ca224dd1",
    "metadata": {},
    "outputs": [],
@@ -29,14 +29,8 @@
     "    return [a/b for a,b in zip(x,y)]\n",
     "\n",
     "def filter_vec(df, name):\n",
-    "    x = df[(df.name == name + \":vector\") & (df.type == \"vector\")] #.filter([\"vectime\",\"vecvalue\"])\n",
-    "    return x #pd.DataFrame(index=x.vectime.values[0], data={name : x.vecvalue.values[0]})\n",
-    "    \n",
-    "#for i in range(1,len(vec)):\n",
-    "#    row = vec.iloc[i]\n",
-    "#    row = pd.DataFrame(index=row.vectime, data={data_name : row.vecvalue})\n",
-    "#    mean_res = pd.concat((mean_res, row)    \n",
-    "#mean_res = mean_res_dc.groupby(level=0).mean()"
+    "    x = df[(df.name == name + \":vector\") & (df.type == \"vector\")]\n",
+    "    return x"
    ]
   },
   {
@@ -49,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "c3bf3740-97a4-4ef5-94c5-cc84c33f41f3",
    "metadata": {},
    "outputs": [
@@ -158,7 +152,7 @@
        "74      None    NaN  [113.178218007921]  [250.0]  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "961133a7-6cb9-4a80-9d6f-d7b6dc80ace4",
    "metadata": {},
    "outputs": [],
@@ -187,8 +181,6 @@
     "def process_vector(df, data_name: str):\n",
     "    # Empezamos el proceso de merging del conjunto de datos\n",
     "    row = df.iloc[0]\n",
-    "    print(type(row.vectime))\n",
-    "    print(type(row.vecvalue))\n",
     "    \n",
     "    times = np.append([0], row.vectime)\n",
     "    times = np.append(times, [3600])\n",
@@ -205,22 +197,7 @@
    "execution_count": 6,
    "id": "485adbf1-a580-4919-8cd4-f17a82ef4c56",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res_dc = dict()\n",
     "res_dc[\"vms\"] = process_vector(filter_vec(targetDcRes, \"allocatedVms\"), \"vms\")\n",
@@ -265,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "ae381598-e417-4b8b-b8b1-8b6c877094a2",
    "metadata": {},
    "outputs": [],
@@ -345,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "7c28c7d1-cf65-47fa-84d8-e777157fb102",
    "metadata": {},
    "outputs": [
@@ -454,7 +431,7 @@
        "74      None    NaN  [112.981110385129]  [250.0]  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,25 +452,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "183ea16b-56aa-49cd-bfc8-801efe0d6f0a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res_fog = dict()\n",
     "res_fog[\"vms\"] = process_vector(filter_vec(targetFogRes, \"allocatedVms\"), \"vms\")\n",
@@ -512,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "1024f86e-84c6-468e-926e-7fc38adc654a",
    "metadata": {},
    "outputs": [],
@@ -526,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "c4344a6e-0f09-46e2-b9f7-f573b42ccb21",
    "metadata": {},
    "outputs": [
